force-app/main/default/objects/EYI_Marketing_Budget_Notification_config__mdt/EYI_Marketing_Budget_Notification_config__mdt.object-meta.xml
<CustomObject>
    <label>EYI_Marketing Budget Notification config</label>
    <pluralLabel>EYI_Marketing Budget Notification config</pluralLabel>
</CustomObject>