force-app/main/default/objects/EYI_Marketing_Budget_Notification_config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to track threshold is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>