force-app/main/default/objects/EYI_Marketing_Budget_Notification_config__mdt/fields/EYI_Threshold_High__c.field-meta.xml
<CustomField>
    <fullName>EYI_Threshold_High__c</fullName>
    <description>This field used to capture low Threshold value of utilized budget.</description>
    <label>Threshold High(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>