force-app/main/default/objects/EYI_Marketing_Budget_Notification_config__mdt/fields/EYI_Threshold_Low__c.field-meta.xml
<CustomField>
    <fullName>EYI_Threshold_Low__c</fullName>
    <description>This field used to capture low Threshold value of utilized budget.</description>
    <label>Threshold Low(%)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>